Clean up files based on "Collections.sort -> List.sort" refactoring